--- a/app/src/main/res/layout/item_filtercurriculum.xml
+++ b/app/src/main/res/layout/item_filtercurriculum.xml
@@ -7,7 +7,7 @@
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/skill"
+        android:text="@string/curriculum"
         android:textSize="18sp"
         android:layout_marginTop="16dp"
         android:padding="8dp"
@@ -19,5 +19,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:id="@+id/list_skills"/>
+        android:nestedScrollingEnabled="true"
+        android:id="@+id/list_curriculums"/>
 </LinearLayout>
