--- a/app/src/main/res/layout/layout_fragmentdetail.xml
+++ b/app/src/main/res/layout/layout_fragmentdetail.xml
@@ -151,6 +151,45 @@
                         android:id="@+id/filtercurriculum"/>
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checkable="true"
+                android:clickable="true"
+                android:layout_marginStart="8dp"
+                android:id="@+id/card_style"
+                android:focusable="true"
+                app:checkedIcon="@null"
+                style="@style/Widget.MaterialComponents.CardView"
+                app:cardCornerRadius="16dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:id="@+id/layout_filterstyle"
+                    android:orientation="horizontal">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:textSize="17sp"
+                        android:text="@string/style"/>
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawableEnd="@drawable/ic_arrowdown"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="6dp"
+                        android:layout_marginTop="2dp"
+                        android:textSize="17sp"
+                        android:id="@+id/filterstyle"/>
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
+
         </LinearLayout>
     </HorizontalScrollView>
 
