--- a/app/src/main/res/layout/items_owned.xml
+++ b/app/src/main/res/layout/items_owned.xml
@@ -6,11 +6,33 @@
     android:paddingStart="0dp"
     android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="140dp"
-        android:layout_height="256dp"
-        android:id="@+id/owned_item_image"/>
-    
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <ImageView
+            android:layout_width="160dp"
+            android:layout_height="256dp"
+            android:id="@+id/owned_item_image"/>
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/owned"
+            android:rotation="320"
+            android:paddingStart="19dp"
+            android:paddingEnd="19dp"
+            android:layout_marginTop="9dp"
+            android:layout_marginStart="-16dp"
+            android:background="#cc100002"
+            android:textColor="@color/white"
+            android:textSize="12sp"/>
+
+
+    </FrameLayout>
+
+
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="140dp"
         android:layout_height="wrap_content"
