--- a/app/src/main/res/layout/item_detail.xml
+++ b/app/src/main/res/layout/item_detail.xml
@@ -20,11 +20,32 @@
         app:cardCornerRadius="5dp"
         android:elevation="3dp">
 
-        <ImageView
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/detail_item_image" />
+            android:layout_height="match_parent" >
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/detail_item_image" />
+
+            <TextView
+                android:id="@+id/owned_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/owned"
+                android:rotation="320"
+                android:paddingStart="19dp"
+                android:paddingEnd="19dp"
+                android:visibility="gone"
+                android:layout_marginTop="9dp"
+                android:layout_marginStart="-16dp"
+                android:background="@color/black"
+                android:textColor="@color/white"
+                android:textSize="12sp"/>
+
+
+        </FrameLayout>
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.textview.MaterialTextView
